--- a/index.html
+++ b/index.html
@@ -129,8 +129,10 @@
     
     </div>
   </section>
-
+<div class="buttonn">
   <a href="./product.html"><button class="button" style="vertical-align:middle" ><span >See More </span></button></a>
+</div>
+  
   <!--連去貨品目錄-->
 
 
